--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <input type="text" name="destination" id="destination">
     <input type="text" name="depart_date" id="go_date">
     <input type="text" name="return_date" id="return_date">
-    <input type="submit" value="Submissive" onclick="get_flight_instances_matches()">
+    <input type="submit" value="Submit" onclick="get_flight_instances_matches()">
     <script src="test.js"></script>
 </body>
 </html>
